# tuxdrive

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
backend/auth/: Cargo.toml
backend/auth/src/: error.rs  lib.rs  manager.rs  oauth2.rs  token.rs  token_store.rs
backend/daemon/: Cargo.toml  build.rs
backend/daemon/src/: config.rs  ipc.rs  logging.rs  login_flow.rs  main.rs  service.rs  sync_folder.rs  sync_resolve.rs
backend/database/: Cargo.toml
backend/database/migrations/: 001_initial.sql
backend/database/src/: error.rs  lib.rs  models.rs  repository.rs
backend/database/tests/: test_database.rs
backend/drive/: Cargo.toml
backend/drive/src/: about.rs  changes.rs  client.rs  error.rs  files.rs  lib.rs  models.rs
backend/scheduler/: Cargo.toml
backend/scheduler/src/: error.rs  lib.rs  retry.rs  scheduler.rs
backend/scheduler/tests/: test_retry.rs
backend/sync/: Cargo.toml
backend/sync/src/: checksum.rs  conflict.rs  engine.rs  error.rs  lib.rs  queue.rs
backend/sync/tests/: test_conflict.rs
backend/watcher/: Cargo.toml
backend/watcher/src/: error.rs  event.rs  filter.rs  lib.rs  watcher.rs
backend/watcher/tests/: test_watcher_filter.rs
docs/: architecture.md  user-guide.md
frontend/flutter/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
frontend/flutter/lib/: main.dart  version.dart
frontend/flutter/lib/ipc/: daemon_client.dart
frontend/flutter/lib/providers/: sync_provider.dart
frontend/flutter/lib/screens/: login_screen.dart  main_screen.dart
frontend/flutter/lib/screens/tabs/: about_tab.dart  files_tab.dart  logs_tab.dart
frontend/flutter/lib/services/: update_checker.dart
frontend/flutter/lib/widgets/: change_sync_folder_dialog.dart  sync_conflict_dialog.dart  sync_status_badge.dart
frontend/flutter/linux/: CMakeLists.txt
frontend/flutter/linux/runner/: my_application.cc
frontend/flutter/test/: widget_test.dart
packaging/: build-packages.sh  default-credentials.sh  postinst.sh  postrm.sh  tuxdrive-indicator.service  tuxdrive.desktop  tuxdrive.service
scripts/: bump-version.sh  tuxdrive-ctl  tuxdrive-indicator
shared/proto/: tuxdrive.proto
tests/integration/: test_checksum.rs  test_conflict.rs  test_queue.rs  test_watcher_filter.rs
