[workspace]
resolver = "2"
members = [
    "backend/auth",
    "backend/drive",
    "backend/database",
    "backend/watcher",
    "backend/sync",
    "backend/scheduler",
    "backend/daemon",
]

[workspace.package]
version     = "0.1.4"
edition     = "2021"
authors     = ["TuxDrive Contributors"]
license     = "MIT"
repository  = "https://github.com/you/tuxdrive"

[workspace.dependencies]
# Async
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }

# HTTP / REST
reqwest      = { version = "0.12", features = ["json", "stream", "native-tls"] }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Database
sqlx         = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }

# Crypto
sha2         = "0.10"
hex          = "0.4"

# Filesystem watching
notify       = "6"
notify-debouncer-full = "0.3"

# Secret storage
keyring      = { version = "3", features = ["linux-native"] }

# Error handling
thiserror    = "1"
anyhow       = "1"

# Logging
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono       = { version = "0.4", features = ["serde"] }

# CLI / config
clap         = { version = "4", features = ["derive", "env"] }
dirs         = "5"

# IPC (Unix socket + protobuf)
prost        = "0.13"
prost-types  = "0.13"
tonic        = "0.12"
tonic-build  = "0.12"

# Utilities
uuid         = { version = "1", features = ["v4"] }
bytes        = "1"
futures      = "0.3"
async-trait  = "0.1"
parking_lot  = "0.12"
dashmap      = "6"
once_cell    = "1"
url          = "2"
rand         = "0.8"

# Internal workspace crates
tuxdrive-auth     = { path = "backend/auth" }
tuxdrive-drive    = { path = "backend/drive" }
tuxdrive-database = { path = "backend/database" }
tuxdrive-watcher  = { path = "backend/watcher" }
tuxdrive-sync     = { path = "backend/sync" }
tuxdrive-scheduler = { path = "backend/scheduler" }

[profile.release]
opt-level  = 3
lto        = "thin"
strip      = true
