[package]
name        = "tuxdrive-daemon"
description = "TuxDrive synchronisation daemon binary"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "tuxdrive-daemon"
path = "src/main.rs"

[dependencies]
tuxdrive-auth      = { workspace = true }
tuxdrive-drive     = { workspace = true }
tuxdrive-database  = { workspace = true }
tuxdrive-watcher   = { workspace = true }
tuxdrive-sync      = { workspace = true }
tuxdrive-scheduler = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
clap             = { workspace = true }
dirs             = { workspace = true }
chrono           = { workspace = true }
prost            = { workspace = true }
tonic            = { workspace = true }
futures          = { workspace = true }
parking_lot      = { workspace = true }
once_cell        = { workspace = true }
libc             = "0.2"

[build-dependencies]
tonic-build = { workspace = true }
