[package]
name        = "tuxdrive-database"
description = "SQLite metadata database for TuxDrive"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
dirs         = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util"] }
tempfile     = "3"
